# obs-studio

plugins/: CMakeLists.txt
plugins/gaze/: CMakeLists.txt  color-source-gaze.c  gaze.c
plugins/gaze/cmake/: legacy.cmake
plugins/gaze/cmake/windows/: obs-module.rc.in
plugins/gaze/data/locale/: en-US.ini
